--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Home
 <p>
   For Operations, there is selection of wide-spread Anti-Patterns that are
   applicable to every organization. There is also another variety of
-  Anti-Pattern tat will be more localized or application-specific. We are
+  Anti-Pattern that will be more localized or application-specific. We are
   priamrily interested in those which were well thought out, seemingly
   reasonable solutions, only for them to turn into painfully complex and
   unwieldy in practice.
